# PortalCalibration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: FindLightCommander.cmake
include/: CalibrationData.h  CalibrationEngine.h  DynamicallyScriptableQObject.h  ISerializer.h  JSSerializer.h  NFringeStructuredLight.h  ScriptInterface.h  TwoWavelengthPhaseUnwrapper.h  Utils.h
src/: Application.cpp  CMakeLists.txt  CalibrationData.cpp  CalibrationData.h  CalibrationEngine.cpp  CalibrationEngine.h  Display.cpp  Display.h  ISerializer.h  ImageIO.cpp  JSSerializer.cpp  JSSerializer.h  NFringePhaseWrapper.cpp  NFringePhaseWrapper.h  NFringeStructuredLight.cpp  NFringeStructuredLight.h  Phase2ProjectorMapper.cpp  Phase2ProjectorMapper.h  ScriptInterface.cpp  TwoWavelengthPhaseUnwrapper.cpp  TwoWavelengthPhaseUnwrapper.h  Utils.cpp  Utils.h  calibrate.cpp  calibrate.h  cameraInput.cpp  cameraInput.h  main.cpp
test/: CMakeLists.txt  NFringeStructuredLightTest.cpp  TwoWavelengthPhaseUnwrapperTest.cpp
utils/ExampleCalibrationScripts/: Calibrate.js
